	* il_stack.c (ilActiveImage/Mipmap/Face/Layer): Added another check for NULL, changed error.
	  Changed order of statements in for loop.  This leads to much much less in the way of
	  ilSetError calls, since we do not have iCurImage == NULL.
	* il_vtf.h:43: Changed to ILuint from ILint.
	* il_vtf.c: Changed VtfInitMipmaps calls to VtfInitFacesMipmaps calls and changed iLoadVtfInternal
	  to support environment maps.
	* il.h:384: Added IL_SPHEREMAP.
	* il_hdr.c:467: Changed to char* to get OS X to stop issuing a warning.
	* il_size.c:53: Changed return value to ILuint.
	* devil_cpp_wrapper.hpp: Removed MSVC++ #pragma at the top for deprecated lib.

2009-01-31 Denton Woods <doomwiz@users.sf.net>
	* Added newlines to the end of several files to keep gcc quiet.
	* Added new MSVC++ projects for examples.
	* il_bmp.c:556: Changed to Header->biWidth from iCurImage->Width.  iCurImage->Width was not
	  updated to the new width at this point.
	* il_rotate.c (iluRotate_): Rewrote to fix 1 pixel shifting issue.
	* Updated DevIL Manual with new ilSaveL information.
	* il_stack.c (ilCloseImage): Added missing delete of Faces member.
	* il_dds-save.c (ilCompressDXT): Added this function.
	* il.h: Removed ilNVidiaCompressDXT and ilSquishCompressDXT - moved to il_internal.h.
	* il_dds-save.c:151: Changed to Faces from Images.
	* il_dds-save.c (CompressTo565): Added IL_ALPHA case.
	* Updated DevIL Manual with new DXTC information.

2009-02-01 Denton Woods <doomwiz@users.sf.net>
	* devil_internal_exports.h: Commented members of ILimage struct using Doxygen-style comments.
	  Removed deprecated, commented-out members (NumNext, NumLayers, NumMips).
	* Updated several functions with appropriate Doxygen comments.
	* il.h: Updated IL_XXX file format defines with Doxygen comments.
	* ilu_rotate.c: Changed min/max calls to IL_MIN/IL_MAX.
	* ilut_states.c (ilutSetInteger): Fixed ILUT_MAXTEX_DEPTH call and added checks around first
	  three calls for Param >= 1.
